# stiva

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmarks.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/: architecture.md  cli.md  security-audit-log.md  spec-compliance.md
docs/adr/: 0001-kavach-sandbox-abstraction.md  0002-toml-over-yaml.md  0003-daemon-vs-oneshot-model.md  0004-persistent-container-state.md  0005-oci-fallback-backend-selection.md  0006-majra-pubsub-lifecycle-events.md  0007-cgroups-v2-only.md  0008-library-first-with-cli.md  0009-mcp-structured-output.md  0010-content-addressable-build-cache.md  0011-dual-stack-networking.md  README.md
docs/development/: roadmap.md  scripts.md  testing.md
docs/guides/: networking.md  quick-start.md  security.md
scripts/: bench-history.sh  bench.sh
src/: agent.rs  ansamblu.rs  audit.rs  build.rs  compose.rs  container.rs  convert.rs  encrypted.rs  error.rs  fleet.rs  health.rs  image.rs  intents.rs  lib.rs  main.rs  mcp.rs  network.rs  oci.rs  registry.rs  runtime.rs  storage.rs
src/network/: bridge.rs  dns.rs  manager.rs  mod.rs  nat.rs  pool.rs  rootless.rs
supply-chain/: audits.toml  config.toml
tests/: integration.rs
