[package]
name = "stiva"
version = "0.21.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "OCI-compatible container runtime — image management, container lifecycle, and orchestration for AGNOS"
homepage = "https://github.com/MacCracken/stiva"
repository = "https://github.com/MacCracken/stiva"
readme = "README.md"
keywords = ["container", "oci", "runtime", "docker", "orchestration"]
categories = ["os", "virtualization"]

[features]
default = ["runtime"]
runtime = []
image = []
network = []
compose = []
registry = []
full = ["runtime", "image", "network", "compose", "registry"]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
bytes = "1"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "io-util", "process", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"

# Logging
tracing = "0.1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Sandbox (kavach provides isolation)
kavach = { version = "0.21.3", features = ["process", "oci"] }

# Queue / scheduling (majra provides fleet primitives)
majra = { version = "0.21.3", features = ["queue", "heartbeat"] }

# Container filesystem
flate2 = "1"
tar = "0.4"

# Firewall / NAT (nein provides nftables rules)
nein = { version = "0.21.3", features = ["nat", "bridge", "apply"] }

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "process", "signal", "resource", "fs", "user"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
wiremock = "0.6.5"

[patch.crates-io]
kavach = { path = "../kavach" }
majra = { path = "../majra" }
nein = { path = "../nein" }
