[package]
name = "stiva"
version = "2.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-or-later"
description = "OCI-compatible container runtime — image management, container lifecycle, and orchestration for AGNOS"
homepage = "https://github.com/MacCracken/stiva"
repository = "https://github.com/MacCracken/stiva"
readme = "README.md"
keywords = ["container", "oci", "runtime", "docker", "orchestration"]
categories = ["os", "virtualization"]
exclude = ["Cargo.lock"]

[features]
default = ["full"]
runtime = ["image", "registry"]
image = []
network = []
ansamblu = ["runtime"]
registry = []
encrypted = ["dep:agnosys", "dep:aes-gcm", "dep:getrandom"]
full = ["runtime", "image", "network", "ansamblu", "registry"]

[dependencies]
# Core
bote = { version = ">=0.91" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = { version = "0.0.23", default-features = false, features = ["deserialize"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
bytes = "1"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "io-util", "process", "sync", "fs"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Sandbox (kavach provides isolation)
kavach = { version = ">=1.0", features = ["process", "oci"] }

# Queue / scheduling (majra provides fleet primitives)
majra = { version = ">=1.0", features = ["queue", "heartbeat", "pubsub"] }

# Container filesystem
flate2 = "1"
zstd = "0.13"
tar = "0.4"

# Firewall / NAT (nein provides nftables rules)
nein = { version = ">=0.90", features = ["nat", "bridge", "apply"] }

# Encrypted / verified storage (optional — agnosys LUKS + dm-verity)
agnosys = { git = "https://github.com/MacCracken/agnosys", tag = "0.50.0", features = ["luks", "dmverity"], optional = true }

# OCI image layer encryption (optional — behind `encrypted` feature)
aes-gcm = { version = "0.10", optional = true }
getrandom = { version = "0.3", optional = true }

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1", features = ["mount", "process"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
wiremock = "0.6.5"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "benchmarks"
harness = false

[patch.crates-io]
bote = { path = "../bote" }
kavach = { path = "../kavach" }
majra = { path = "../majra" }
nein = { path = "../nein" }

[patch."https://github.com/MacCracken/agnosys"]
agnosys = { path = "../agnosys" }
